[package]
name = "new-terminal-hyprland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "thin"
opt-level = 'z' # Optimize for size

[dependencies]
anyhow = "1.0.71"
hyprland = "0.3.3"
lazy_static = "1.4.0"
